# mocatex-wiki

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: pages.yaml
archive/functional-programming/haskell/: 02-functions.md  03-types.md  04-control-structures.md  05-higher-order-functions.md  06-recursion.md  07-func-appl-monad.md  index.md
docs/: .pages  how-to-write.md  index.md
docs/assets/plots/: plotly_test.py  pytorch_plots.py
docs/assets/styles/: overrides.css
docs/bash/: bash-overview.md  save-for-sys-use.md  system-usage.md
docs/functional-programming/assets/: haskell-logo.avif
docs/functional-programming/haskell/: 01-basics.md  03-types.md  basics.md  functions.md  index.md
docs/getting-started/: .pages  how-to-write.md  writing-guide.md  zensical-config.md
docs/git/: git-hooks.md  git-tricks.md
docs/python/: pytorch.md  uv-package-manager.md
docs/python/libraries/: pathlib.Path.md  pytorch.md  streamlit.md  tqdm.md
docs/rust/: index.md
docs/rust/assets/: rust-banner.avif
docs/swift/: index.md
docs/swift/swift-core/: 01-swift-basics.md  99-integrated-functions.md
docs/tooling/git/: git-hooks.md
docs/tooling/workflows/: pre-commit.md
docs/web-dev/css/: index.md
docs/web-dev/frameworks/: d3-js.md
docs/web-dev/html/: index.md
docs/web-dev/static-site-generator/: mkdocs.md
