[project]
name = "mocatex-wiki"
version = "0.1.0"
description = "Personal wiki for stuff I learn"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-material>=9.6.18",
    "mkdocs-plotly-plugin>=0.1.3",
    "mkdocs-section-index>=0.3.10",
    "numpy>=2.3.4",
    "plotly<6",
    "pymdown-extensions>=10.16.1",
]
